implemented method findById with test, implemented prevention of duplicates in repository,